--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,25 @@
 {
   "name": "webmonsterA/HeadGenerator",
   "description": "Class for best seo head",
+  "keywords": [
+    "seo",
+    "head",
+    "generator"
+  ],
+  "homepage": "https://webmonster.tech/",
   "type": "library",
   "license": "MIT",
   "authors": [
     {
       "name": "webmonster",
-      "email": "hello@webmonster.tech"
+      "email": "hello@webmonster.tech",
+      "homepage": "https://github.com/Webmonster-Community/HeadGeneratorPhp/contributors"
     }
   ],
-  "require": {},
+  "minimum-stability": "stable",
+  "require": {
+    "php": ">=7.4.0"
+  },
   "autoload": {
     "psr-4": {
       "webmonsterSEO\\": "src/"
