--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,12 @@
   },
   "autoload": {
     "psr-4": {
-      "webmonsterSEO\\": "src/"
+      "webmonsterSEO\\": "src/",
+      "tests\\": "tests/"
     }
+  },
+  "require-dev": {
+    "rector/rector": "^0.15.23",
+    "phpunit/phpunit": "^9"
   }
 }
