fix: updated composer.json

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
   },
   "autoload": {
     "psr-4": {
-      "webmonsterSEO\\": "src/",
+      "webmonsterSEO\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
       "tests\\": "tests/"
     }
   },
